--- a/prj6/src/index.html
+++ b/prj6/src/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title>FluxApp</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/foundation.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
